--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-       
+
         <section class="wrapper">
             <div class="div-1">
-                Div 1
+                I was born and raised in Williamsville, NY. I don't have any "real root."  I certinly don't have a travel bug.  I am a first generation American but wish I was a son of the American revolution.
             </div>
             <div class="div-2">
-                Div 2
+                My passion: FOOD.
             </div>
             <div class="div-3">
-                Div 3
+                I know how to drive most types of vehicles.  The hipsters that love biking are cringeworthy.
             </div>
-        </section>    
+        </section>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
